--- a/src/app/Components/home/home/home.component.html
+++ b/src/app/Components/home/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+<div class="container-fluid flex h-[90vh] justify-center items-center">
+<p class="text-8xl font-extrabold bg-gradient-to-r from-pink-600 via-green-400 to-blue-400 text-transparent bg-clip-text background-animate">
+    Welcome to Demo Project
+</p>
+</div>
