--- a/src/app/Components/user/user-list/user-list.component.html
+++ b/src/app/Components/user/user-list/user-list.component.html
@@ -1,1 +1,110 @@
-<p>user-list works!</p>
+<app-navbar></app-navbar>
+
+<div id="userTable"  class="container-fluid">
+    <div class="px-5 pt-5">
+        <div class="flex items-center justify-between">
+            <div class="tableTitile text-xl text-blue-700 font-bold">
+              User List
+            </div>
+            <div class="addUser">
+              <button class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" (click)="addUser()">Add User</button>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="showUser">
+        <div class="p-5 rounded-sm overflow-auto">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 text-gray-900 dark:text-white bg-white shadow-lg dark:bg-gray-700" matSort>
+        
+                <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
+              
+                <!-- Position Column -->
+                <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef> Id </th>
+                  <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                </ng-container>
+              
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+              
+                <!-- Weight Column -->
+                <ng-container matColumnDef="gender">
+                  <th mat-header-cell *matHeaderCellDef> Gender </th>
+                  <td mat-cell *matCellDef="let element"> {{element.gender | titlecase}} </td>
+                </ng-container>
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="dob">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Date of Birth </th>
+                  <td mat-cell *matCellDef="let element"> {{element.dob | date : 'mediumDate'}} </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="age">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Age </th>
+                  <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="address">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+                  <td mat-cell *matCellDef="let element"> {{element.address | addressShortner:30}} </td>
+                </ng-container>
+                
+                <ng-container matColumnDef="country">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
+                  <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+                </ng-container>
+    
+                <ng-container matColumnDef="edit">
+                    <th mat-header-cell *matHeaderCellDef> Edit </th>
+                    <td mat-cell *matCellDef="let element; let i = index;"> 
+                        <span class="material-symbols-outlined cursor-pointer" (click)="editUser(element,i)">
+                        edit
+                        </span> 
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef> Delete </th>
+                    <td mat-cell *matCellDef="let element; let i = index;"> 
+                        <span class="material-symbols-outlined cursor-pointer" (click)="deleteUser(element)">
+                        delete
+                        </span> 
+                    </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>      
+        </div>
+    </div>
+</div>
+
+
+  <div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full mt-24">
+      <div class="relative p-4 w-full max-w-2xl  m-auto">
+          <!-- Modal content -->
+          <div class="relative bg-white rounded-lg shadow-lg dark:bg-gray-700 border">
+              <!-- Modal header -->
+              <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                <div class="div flex items-center justify-center">
+                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mx-auto">
+                        {{isEdit ? 'Edit User' : 'Add User'}}
+                    </h3>
+                </div>
+                  <button (click)="closeModal()" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="default-modal">
+                      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                      </svg>
+                      <span class="sr-only">Close modal</span>
+                  </button>
+              </div>
+              <!-- Modal body -->
+              <div class="p-4 md:p-5 space-y-4">
+                  <app-user-details [userData]="userDataToEdit" (closeModal)="closeModal()"></app-user-details>
+              </div>
+          </div>
+      </div>
+  </div>
+  
